--- a/apps/console/src/styles/app.css
+++ b/apps/console/src/styles/app.css
@@ -1,3 +1,14 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+@import "tailwindcss";
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+@theme {
+  --color-accent: #f35815;
+}
+
+button {
+  cursor: pointer;
+}
